--- a/name-that-pokemon-backend/.github/workflows/deploy-docs.yml
+++ b/name-that-pokemon-backend/.github/workflows/deploy-docs.yml
@@ -3,7 +3,7 @@ name: Deploy API Documentation
 on:
   push:
     branches:
-      - main  # or master, depending on your default branch
+      - main
   workflow_dispatch:
 
 permissions:
@@ -24,17 +24,23 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          path: name-that-pokemon-backend
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
       - name: Create .nojekyll file
-        run: touch ./docs/swagger-ui/dist/.nojekyll
+        run: |
+          cd name-that-pokemon-backend
+          touch .nojekyll
+          mkdir -p docs/swagger-ui/dist
+          cp .nojekyll docs/swagger-ui/dist/
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './docs/swagger-ui/dist'
+          path: 'name-that-pokemon-backend/docs/swagger-ui/dist'
 
       - name: Deploy to GitHub Pages
         id: deployment
