--- a/name-that-pokemon-backend/.github/workflows/deploy-docs.yml
+++ b/name-that-pokemon-backend/.github/workflows/deploy-docs.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          submodules: true
+          submodules: recursive
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
