--- a/name-that-pokemon-backend/.github/workflows/deploy-docs.yml
+++ b/name-that-pokemon-backend/.github/workflows/deploy-docs.yml
@@ -19,7 +19,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: 'https://ocurran21.github.io/NameThatPokemon/name-that-pokemon-backend/docs/swagger-ui/dist/' 
+      url: 'https://ocurran21.github.io/NameThatPokemon/docs/name-that-pokemon-backend/swagger-ui/dist/'  # Ensure accurate URL reflecting your full path
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -30,9 +30,11 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
-      - name: Create .nojekyll file
+      - name: Verify Directory Structure
         run: |
-          touch name-that-pokemon-backend/docs/swagger-ui/dist/.nojekyll
+          cd name-that-pokemon-backend/docs/swagger-ui/dist
+          ls -l  # List files to ensure everything is in place
+          touch .nojekyll  # Create .nojekyll in the target directory
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
