--- a/github/workflows/deploy-docs.yml
+++ b/github/workflows/deploy-docs.yml
@@ -30,11 +30,9 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
-      - name: Verify Directory Structure
+      - name: Move to Swagger-UI Directory
         run: |
           cd name-that-pokemon-backend/docs/swagger-ui/dist
-          ls -l  # List files to ensure everything is in place
-          touch .nojekyll  # Create .nojekyll in the target directory
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
